tests/miniJava/neg/004942_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , int [] class java { public static void Main ( String [ ] java ) { { } } } java ) { return 0 ; } }
